--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
         "build": "turbo build",
         "clean": "run-s clean:build clean:caches",
         "clean:build": "pnpm --filter @sky-monitor/* clean",
-        "clean:caches": " rimraf .turbo/cache **/*/.turbo",
-        "clean:deps": "rimraf node_modules **/*/node_modules",
-        "clean:all": "run-s clean:build clean:caches clean:deps",
+        "clean:caches": "rimraf .turbo",
+        "clean:all": "run-s clean:build clean:caches",
         "dev": "run-p dev:server:dsn dev:server:monitor dev:client:monitor",
-        "dev:server:dsn": "pnpm --filter apps/backend/dsn-server start:dev",
-        "dev:server:monitor": "pnpm --filter apps/backend/monitor start:dev",
-        "dev:client:monitor": "pnpm --filter apps/frontend/monitor dev",
+        "dev:server:dsn": "pnpm --filter @sky-monitor/monitor-dsn-server start:dev",
+        "dev:server:monitor": "pnpm --filter @sky-monitor/monitor-server start:dev",
+        "dev:client:monitor": "pnpm --filter @sky-monitor/monitor-client start:dev",
         "docker:start": "docker compose -f .devcontainer/docker-compose.yml up -d",
         "docker:stop": "docker compose -f .devcontainer/docker-compose.yml down",
         "docker:deploy": "docker compose -f .devcontainer/docker-compose.deploy.yml up -d",
         "docker:build-deploy": "pnpm build && pnpm docker:deploy",
         "docker:deploy:stop": "docker compose -f .devcontainer/docker-compose.deploy.yml down",
         "start": "run-s docker:start dev",
+        "test-api": "bash scripts/test-backend-api.sh",
         "lint": "eslint",
         "lint:style": "stylelint",
         "lint:staged": "lint-staged",
@@ -72,7 +72,7 @@
         "cz-git": "1.10.1",
         "tsup": "8.3.0",
         "turbo": "2.1.3",
-        "rimraf": "6.0.1",
+        "rimraf": "^6.0.1",
         "npm-run-all2": "6.2.3"
     }
 }
