--- a/apps/backend/dsn-server/package.json
+++ b/apps/backend/dsn-server/package.json
@@ -11,7 +11,9 @@
         "start": "nest start",
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/main"
+        "start:prod": "node dist/main",
+        "clean": "rimraf dist",
+        "test:e2e": "vitest"
     },
     "dependencies": {
         "@nest-modules/mailer": "1.3.22",
@@ -57,6 +59,8 @@
         "supertest": "7.0.0",
         "ts-loader": "9.5.1",
         "ts-node": "10.9.2",
-        "tsconfig-paths": "4.2.0"
+        "tsconfig-paths": "4.2.0",
+        "vitest": "0.30.1",
+        "axios": "1.6.7"
     }
 }
