--- a/apps/backend/monitor/package.json
+++ b/apps/backend/monitor/package.json
@@ -12,7 +12,8 @@
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
-        "clean": "rimraf dist"
+        "clean": "rimraf dist",
+        "test:e2e": "vitest run test/api.e2e.test.ts"
     },
     "dependencies": {
         "@nest-modules/mailer": "1.3.22",
@@ -60,6 +61,8 @@
         "supertest": "7.0.0",
         "ts-loader": "9.5.1",
         "ts-node": "10.9.2",
-        "tsconfig-paths": "4.2.0"
+        "tsconfig-paths": "4.2.0",
+        "vitest": "^1.0.0",
+        "axios": "1.7.7"
     }
 }
