--- a/packages/browser-utils/package.json
+++ b/packages/browser-utils/package.json
@@ -2,14 +2,14 @@
     "name": "@sky-monitor/monitor-sdk-browser-utils",
     "version": "1.0.0",
     "main": "build/cjs/index.js",
-    "module": "build/esm/index.js",
+    "module": "build/esm/index.mjs",
     "types": "build/types/index.d.ts",
     "exports": {
         "./package.json": "./package.json",
         ".": {
             "import": {
                 "types": "./build/types/index.d.ts",
-                "default": "./build/esm/index.js"
+                "default": "./build/esm/index.mjs"
             },
             "require": {
                 "types": "./build/types/index.d.ts",
