--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,7 +2,7 @@
     "extends": "../../tsconfig.json",
     "include": ["src/**/*"],
     "compilerOptions": {
-        // package specific compiler options
+        "module": "esnext",
         "isolatedModules": false
     }
 }
