fix(core): 修复一些类型问题

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -5,6 +5,8 @@
         "module": "esnext",
         "types": ["node"],
         "lib": ["dom", "es6"],
-        "jsx": "react"
+        "jsx": "react",
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true
     }
 }
