--- a/apps/backend/monitor/package.json
+++ b/apps/backend/monitor/package.json
@@ -46,7 +46,8 @@
         "pg": "8.13.0",
         "@clickhouse/client": "1.6.0",
         "zod": "3.23.8",
-        "nanoid": "3.1.23"
+        "nanoid": "3.1.23",
+        "source-map": "0.7.4"
     },
     "devDependencies": {
         "pm2": "5.4.2",
@@ -54,6 +55,7 @@
         "@nestjs/schematics": "10.1.4",
         "@nestjs/testing": "10.4.1",
         "@types/express": "4.17.21",
+        "@types/multer": "1.4.11",
         "@types/node": "22.5.0",
         "@types/bcryptjs": "2.4.6",
         "jest": "29.7.0",
