--- a/packages/browser/tsconfig.types.json
+++ b/packages/browser/tsconfig.types.json
@@ -1,10 +1,11 @@
 {
     "extends": "./tsconfig.json",
-
+    "exclude": ["src/**/__tests__/**", "src/**/*.test.ts", "**/*.test.ts", "vitest.setup.ts"],
     "compilerOptions": {
         "declaration": true,
         "declarationMap": true,
         "emitDeclarationOnly": true,
-        "outDir": "build/types"
+        "outDir": "build/types",
+        "skipLibCheck": true
     }
 }
