--- a/apps/backend/dsn-server/package.json
+++ b/apps/backend/dsn-server/package.json
@@ -13,7 +13,13 @@
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "clean": "rimraf dist",
-        "test:e2e": "vitest"
+        "test": "vitest run",
+        "test:watch": "vitest watch",
+        "test:cov": "vitest run --coverage",
+        "test:setup": "ts-node test/setup.ts",
+        "test:e2e": "pnpm test:setup && vitest run test/dsn-api.e2e.test.ts",
+        "test:e2e:watch": "vitest watch test/dsn-api.e2e.test.ts",
+        "test:unit": "vitest run src"
     },
     "dependencies": {
         "@nest-modules/mailer": "1.3.22",
