--- a/apps/backend/monitor/package.json
+++ b/apps/backend/monitor/package.json
@@ -13,7 +13,13 @@
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "clean": "rimraf dist",
-        "test:e2e": "vitest run test/api.e2e.test.ts"
+        "test": "vitest run",
+        "test:watch": "vitest watch",
+        "test:cov": "vitest run --coverage",
+        "test:setup": "ts-node test/setup.ts",
+        "test:e2e": "pnpm test:setup && vitest run test/monitor-api.e2e.test.ts",
+        "test:e2e:watch": "vitest watch test/monitor-api.e2e.test.ts",
+        "test:unit": "vitest run src"
     },
     "dependencies": {
         "@nest-modules/mailer": "1.3.22",
@@ -47,7 +53,9 @@
         "@clickhouse/client": "1.6.0",
         "zod": "3.23.8",
         "nanoid": "3.1.23",
-        "source-map": "0.7.4"
+        "source-map": "0.7.4",
+        "uuid": "9.0.1",
+        "ioredis": "5.4.1"
     },
     "devDependencies": {
         "pm2": "5.4.2",
@@ -58,6 +66,7 @@
         "@types/multer": "1.4.11",
         "@types/node": "22.5.0",
         "@types/bcryptjs": "2.4.6",
+        "@types/uuid": "9.0.8",
         "jest": "29.7.0",
         "prettier": "3.3.3",
         "supertest": "7.0.0",
