--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -37,13 +37,14 @@
     "license": "MIT",
     "description": "",
     "dependencies": {
-        "@sky-monitor/monitor-sdk-core": "workspace:*",
-        "@sky-monitor/monitor-sdk-browser-utils": "workspace:*"
+        "@sky-monitor/monitor-sdk-browser-utils": "workspace:*",
+        "@sky-monitor/monitor-sdk-core": "workspace:*"
     },
     "devDependencies": {
-        "vitest": "^1.0.0",
-        "@vitest/ui": "^1.0.0",
         "@vitest/coverage-v8": "^1.0.0",
-        "jsdom": "^24.0.0"
+        "@vitest/ui": "^1.0.0",
+        "jsdom": "^24.0.0",
+        "rrweb": "2.0.0-alpha.4",
+        "vitest": "^1.0.0"
     }
 }
