--- a/apps/frontend/monitor/package.json
+++ b/apps/frontend/monitor/package.json
@@ -39,6 +39,7 @@
         "react-hook-form": "7.53.0",
         "react-router-dom": "6.27.0",
         "recharts": "^2.13.0",
+        "rrweb-player": "1.0.0-alpha.4",
         "tailwind-merge": "2.5.4",
         "tailwindcss": "3.4.14",
         "tailwindcss-animate": "1.0.7",
