--- a/apps/backend/monitor/package.json
+++ b/apps/backend/monitor/package.json
@@ -36,6 +36,7 @@
         "@nestjs/schedule": "4.1.0",
         "@nestjs/swagger": "7.4.0",
         "@nestjs/typeorm": "10.0.2",
+        "bcryptjs": "2.4.3",
         "bull": "4.16.0",
         "class-transformer": "0.5.1",
         "class-validator": "0.14.1",
