--- a/apps/frontend/monitor/package.json
+++ b/apps/frontend/monitor/package.json
@@ -17,6 +17,7 @@
         "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-icons": "1.3.0",
         "@radix-ui/react-label": "2.1.0",
+        "@radix-ui/react-popover": "^1.1.15",
         "@radix-ui/react-select": "^2.1.2",
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "1.1.0",
@@ -36,6 +37,7 @@
         "lucide-react": "0.453.0",
         "postcss": "8.4.47",
         "react": "18.3.1",
+        "react-day-picker": "^9.11.1",
         "react-dom": "18.3.1",
         "react-hook-form": "7.53.0",
         "react-router-dom": "6.27.0",
