--- a/apps/backend/monitor/package.json
+++ b/apps/backend/monitor/package.json
@@ -36,11 +36,13 @@
         "@nestjs/schedule": "4.1.0",
         "@nestjs/swagger": "7.4.0",
         "@nestjs/typeorm": "10.0.2",
+        "@types/cookie-parser": "^1.4.10",
         "bcryptjs": "2.4.3",
         "bull": "4.16.0",
         "class-transformer": "0.5.1",
         "class-validator": "0.14.1",
         "compressing": "1.10.1",
+        "cookie-parser": "^1.4.7",
         "fastest-levenshtein": "^1.0.16",
         "ioredis": "5.4.1",
         "multer": "1.4.5-lts.1",
