--- a/apps/frontend/monitor/package.json
+++ b/apps/frontend/monitor/package.json
@@ -28,6 +28,7 @@
         "@tanstack/react-query": "5.59.15",
         "autoprefixer": "10.4.20",
         "axios": "1.7.7",
+        "axios-retry": "^4.5.0",
         "bcryptjs": "2.4.3",
         "canvas-confetti": "1.9.3",
         "class-variance-authority": "0.7.0",
