--- a/apps/frontend/monitor/package.json
+++ b/apps/frontend/monitor/package.json
@@ -42,6 +42,7 @@
         "react-day-picker": "^9.11.1",
         "react-dom": "18.3.1",
         "react-hook-form": "7.53.0",
+        "react-icons": "^5.5.0",
         "react-router-dom": "6.27.0",
         "recharts": "^2.13.0",
         "rrweb-player": "1.0.0-alpha.4",
