--- a/apps/frontend/monitor/package.json
+++ b/apps/frontend/monitor/package.json
@@ -7,7 +7,9 @@
         "start:dev": "vite",
         "build": "tsc -b && vite build",
         "preview": "vite preview",
-        "typecheck": "tsc --noEmit"
+        "typecheck": "tsc --noEmit",
+        "test": "vitest run",
+        "test:watch": "vitest"
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
