feature(console): 采样率统计、用户事件时间线、transaction事件追踪

--- a/.devcontainer/caddy/Caddyfile
+++ b/.devcontainer/caddy/Caddyfile
@@ -40,7 +40,7 @@
 # {
 #         acme_ca https://acme-staging-v02.api.letsencrypt.org/directory
 # }
-
+# termis
 # 线上监控示例
 monitoring.miaomaedu.com {
 
