--- a/demos/e2e-demo/package.json
+++ b/demos/e2e-demo/package.json
@@ -13,7 +13,8 @@
         "@sky-monitor/monitor-sdk-browser": "workspace:*",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
-        "react-router-dom": "6.27.0"
+        "react-router-dom": "6.27.0",
+        "rrweb-player": "1.0.0-alpha.4"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.1",
