--- a/packages/browser/tsconfig.types.json
+++ b/packages/browser/tsconfig.types.json
@@ -1,5 +1,6 @@
 {
     "extends": "./tsconfig.json",
+    "include": ["src/**/*"],
     "exclude": ["src/**/__tests__/**", "src/**/*.test.ts", "**/*.test.ts", "vitest.setup.ts"],
     "compilerOptions": {
         "declaration": true,
