feat(dashboard): 实现 Dashboard 后端 API 和查询引擎
- 创建 DashboardEntity 和 DashboardWidgetEntity
- 创建 PostgreSQL 数据库迁移脚本
- 实现完整的 Dashboard CRUD API
- 实现完整的 Widget CRUD API
- 实现 QueryBuilderService (Query DSL → ClickHouse SQL)
- 实现 executeQuery API (执行查询并返回结果)
- 支持多种查询类型: 聚合、过滤、分组、排序
- 支持多种操作符: =, !=, >, <, >=, <=, IN, LIKE
- 添加 SQL 注入防护
- 修复 PostgreSQL 时区配置问题
- 添加测试脚本验证所有功能

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -28,6 +28,10 @@ services:
         ports:
             - '5432:5432'
         environment:
+            - TZ=Asia/Shanghai # 容器时区
+            - PGTZ=Asia/Shanghai # PostgreSQL 时区
+            - POSTGRESQL_TIMEZONE=Asia/Shanghai # Bitnami PostgreSQL 时区配置
+            - POSTGRESQL_LOG_TIMEZONE=Asia/Shanghai # 日志时区
             - POSTGRESQL_USERNAME=postgres
             - ALLOW_EMPTY_PASSWORD=yes
             - POSTGRESQL_DATABASE=postgres
