--- a/apps/frontend/monitor/package.json
+++ b/apps/frontend/monitor/package.json
@@ -53,6 +53,7 @@
         "tailwind-merge": "2.5.4",
         "tailwindcss": "3.4.14",
         "tailwindcss-animate": "1.0.7",
+        "uuid": "9.0.1",
         "vaul": "^1.1.0",
         "zod": "^3.23.8",
         "zustand": "^5.0.8"
@@ -65,6 +66,7 @@
         "@types/jest": "^30.0.0",
         "@types/react": "18.3.11",
         "@types/react-dom": "18.3.1",
+        "@types/uuid": "9.0.8",
         "@vitejs/plugin-react": "4.3.2",
         "@vitest/ui": "^1.0.0",
         "jsdom": "^24.0.0",
