--- a/apps/frontend/monitor/package.json
+++ b/apps/frontend/monitor/package.json
@@ -45,6 +45,7 @@
         "react": "18.3.1",
         "react-day-picker": "^9.11.1",
         "react-dom": "18.3.1",
+        "react-grid-layout": "^1.5.2",
         "react-hook-form": "7.53.0",
         "react-icons": "^5.5.0",
         "react-router-dom": "6.27.0",
@@ -66,6 +67,7 @@
         "@types/jest": "^30.0.0",
         "@types/react": "18.3.11",
         "@types/react-dom": "18.3.1",
+        "@types/react-grid-layout": "^1.3.5",
         "@types/uuid": "9.0.8",
         "@vitejs/plugin-react": "4.3.2",
         "@vitest/ui": "^1.0.0",
