--- a/packages/vite-plugin/tsconfig.types.json
+++ b/packages/vite-plugin/tsconfig.types.json
@@ -4,6 +4,7 @@
         "declaration": true,
         "declarationMap": true,
         "emitDeclarationOnly": true,
-        "outDir": "./build/types"
+        "outDir": "./build/types",
+        "skipLibCheck": true
     }
 }
