--- a/apps/frontend/monitor/package.json
+++ b/apps/frontend/monitor/package.json
@@ -12,6 +12,12 @@
         "test:watch": "vitest"
     },
     "dependencies": {
+        "@codemirror/autocomplete": "^6.19.1",
+        "@codemirror/commands": "^6.10.0",
+        "@codemirror/lang-sql": "^6.10.0",
+        "@codemirror/lint": "^6.9.2",
+        "@codemirror/state": "^6.5.2",
+        "@codemirror/view": "^6.38.7",
         "@hookform/resolvers": "^3.9.0",
         "@microsoft/fetch-event-source": "^2.0.1",
         "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -31,6 +37,7 @@
         "@radix-ui/react-toast": "^1.2.2",
         "@radix-ui/react-tooltip": "^1.1.3",
         "@tanstack/react-query": "5.59.15",
+        "@uiw/react-codemirror": "^4.25.3",
         "autoprefixer": "10.4.20",
         "axios": "1.7.7",
         "axios-retry": "^4.5.0",
