fix: 为所有SDK集成添加path字段捕获
- 修复message事件path为空的问题
- 为error事件(runtime_error, unhandled_rejection)添加path
- 为http_error事件添加path
- 为resource_error事件添加path
- 为http_performance事件添加path
- 修复前端message事件显示逻辑,优先从error_message读取
- 修复WebVital评级显示问题,添加perf_rating字段映射
- 修复事件类型筛选栏滚动问题

--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -25,12 +25,7 @@
         "build:transpile": "tsup",
         "build:types": "tsc -p tsconfig.types.json",
         "clean": "rimraf build",
-        "typecheck": "tsc --noEmit",
-        "test": "vitest",
-        "test:run": "vitest run",
-        "test:watch": "vitest watch",
-        "test:coverage": "vitest run --coverage",
-        "test:ui": "vitest --ui"
+        "typecheck": "tsc --noEmit"
     },
     "keywords": [],
     "author": "",
@@ -43,10 +38,6 @@
         "rrweb": "2.0.0-alpha.4"
     },
     "devDependencies": {
-        "@types/pako": "^2.0.4",
-        "@vitest/coverage-v8": "^1.0.0",
-        "@vitest/ui": "^1.0.0",
-        "jsdom": "^24.0.0",
-        "vitest": "^1.0.0"
+        "@types/pako": "^2.0.4"
     }
 }
