--- a/package.json
+++ b/package.json
@@ -47,22 +47,23 @@
         ]
     },
     "devDependencies": {
-        "@types/node": "22.7.5",
         "@eslint/js": "9.12.0",
-        "globals": "15.10.0",
-        "typescript": "5.5.3",
-        "typescript-eslint": "8.8.1",
-        "eslint-plugin-react-refresh": "0.4.12",
-        "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+        "@types/node": "22.7.5",
+        "babel-plugin-transform-remove-console": "^6.9.4",
         "eslint-plugin-prettier": "5.2.1",
+        "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+        "eslint-plugin-react-refresh": "0.4.12",
         "eslint-plugin-simple-import-sort": "12.1.1",
-        "lint-staged": "15.2.10",
-        "prettier": "3.3.3",
         "fast-glob": "3.3.2",
+        "globals": "15.10.0",
         "husky": "9.1.6",
+        "lint-staged": "15.2.10",
+        "npm-run-all2": "6.2.3",
+        "prettier": "3.3.3",
+        "rimraf": "^6.0.1",
         "tsup": "8.3.0",
         "turbo": "2.1.3",
-        "rimraf": "^6.0.1",
-        "npm-run-all2": "6.2.3"
+        "typescript": "5.5.3",
+        "typescript-eslint": "8.8.1"
     }
 }
