--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,17 +25,7 @@
         "build:transpile": "tsup",
         "build:types": "tsc -p tsconfig.types.json",
         "clean": "rimraf build",
-        "typecheck": "tsc --noEmit",
-        "test": "vitest",
-        "test:run": "vitest run",
-        "test:watch": "vitest watch",
-        "test:coverage": "vitest run --coverage",
-        "test:ui": "vitest --ui"
-    },
-    "devDependencies": {
-        "vitest": "^1.0.0",
-        "@vitest/ui": "^1.0.0",
-        "@vitest/coverage-v8": "^1.0.0"
+        "typecheck": "tsc --noEmit"
     },
     "keywords": [],
     "author": "",
