--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -41,7 +41,6 @@
     },
     "devDependencies": {
         "@types/node": "^24.10.1",
-        "vite": "^7.2.2",
-        "vitest": "^1.0.0"
+        "vite": "^7.2.2"
     }
 }
