--- a/apps/backend/monitor/.env.example
+++ b/apps/backend/monitor/.env.example
@@ -18,3 +18,13 @@ CLICKHOUSE_PASSWORD=skyClickhouse2024
 # Application Configuration
 NODE_ENV=development
 PORT=3000
+
+# SMTP Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+SMTP_FROM=noreply@skymonitor.com
+
+# Frontend URL (for password reset links)
+FRONTEND_URL=http://localhost:5173
