fix(auth): 修复找回密码功能

--- a/apps/backend/monitor/.env
+++ b/apps/backend/monitor/.env
@@ -18,3 +18,13 @@ CLICKHOUSE_PASSWORD=skyClickhouse2024
 # Application Configuration
 NODE_ENV=development
 PORT=3000
+
+# SMTP Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=wlhshishuaibi@gmail.com
+SMTP_PASS=pynf uxgx nvih gyob
+SMTP_FROM=Sky Monitor <wlhshishuaibi@gmail.com>
+
+# Frontend URL (for password reset links)
+FRONTEND_URL=http://localhost:5173
