--- a/apps/frontend/monitor/package.json
+++ b/apps/frontend/monitor/package.json
@@ -37,6 +37,7 @@
         "@radix-ui/react-toast": "^1.2.2",
         "@radix-ui/react-tooltip": "^1.1.3",
         "@tanstack/react-query": "5.59.15",
+        "@uiw/codemirror-theme-github": "^4.25.3",
         "@uiw/react-codemirror": "^4.25.3",
         "autoprefixer": "10.4.20",
         "axios": "1.7.7",
