fix: 修复登陆逻辑

--- a/apps/backend/monitor/.env
+++ b/apps/backend/monitor/.env
@@ -18,13 +18,14 @@ CLICKHOUSE_PASSWORD=skyClickhouse2024
 # Application Configuration
 NODE_ENV=development
 PORT=3000
+BACKEND_URL=http://localhost:8081
 
 # SMTP Email Configuration
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=wlhshishuaibi@gmail.com
 SMTP_PASS=pynf uxgx nvih gyob
-SMTP_FROM=Sky Monitor <wlhshishuaibi@gmail.com>
+SMTP_FROM=wlhshishuaibi@gmail.com
 
 # Frontend URL (for password reset links)
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=http://127.0.0.1:5173
