fix: 添加 JWT 环境变量配置
- 在 .env 中添加 JWT_SECRET 和 JWT_REFRESH_SECRET
- 在 .env.example 中添加 JWT 配置示例
- 消除开发环境 JWT 警告
- 配置 Access Token 和 Refresh Token 过期时间

--- a/apps/backend/monitor/.env
+++ b/apps/backend/monitor/.env
@@ -29,3 +29,9 @@ SMTP_FROM=wlhshishuaibi@gmail.com
 
 # Frontend URL (for password reset links)
 FRONTEND_URL=http://127.0.0.1:5173
+
+# JWT Configuration
+JWT_SECRET=dev-jwt-secret-key-change-in-production-32chars
+JWT_REFRESH_SECRET=dev-jwt-refresh-secret-key-change-in-production-32chars
+JWT_ACCESS_TOKEN_EXPIRY=15m
+JWT_REFRESH_TOKEN_EXPIRY=7d
