--- a/apps/backend/monitor/.env.example
+++ b/apps/backend/monitor/.env.example
@@ -28,3 +28,9 @@ SMTP_FROM=noreply@skymonitor.com
 
 # Frontend URL (for password reset links)
 FRONTEND_URL=http://localhost:5173
+
+# JWT Configuration
+JWT_SECRET=your-jwt-secret-key-at-least-32-characters
+JWT_REFRESH_SECRET=your-jwt-refresh-secret-key-at-least-32-characters
+JWT_ACCESS_TOKEN_EXPIRY=15m
+JWT_REFRESH_TOKEN_EXPIRY=7d
