fix: 修正前端 API 配置
- 开发环境使用相对路径 /api,通过 Vite 代理转发
- 生产环境使用完整 URL (包含 /api 前缀)
- 避免路径重复问题

--- a/apps/frontend/monitor/.env.example
+++ b/apps/frontend/monitor/.env.example
@@ -1,5 +1,7 @@
 # API 配置
-VITE_API_BASE_URL=http://localhost:8081
+# 开发环境: 使用相对路径 /api (通过 Vite 代理转发到 http://localhost:8081)
+# 生产环境: 使用完整 URL https://api.skymonitor.com/api
+VITE_API_BASE_URL=/api
 
 # Shop Demo 配置
 VITE_SHOP_DEMO_URL=http://localhost:5433
