--- a/apps/frontend/monitor/.env.production
+++ b/apps/frontend/monitor/.env.production
@@ -1,5 +1,5 @@
 # API 配置
-VITE_API_BASE_URL=https://api.skymonitor.com
+VITE_API_BASE_URL=https://api.skymonitor.com/api
 
 # Shop Demo 配置
 VITE_SHOP_DEMO_URL=https://demo.skymonitor.com
