--- a/apps/frontend/monitor/.env.development
+++ b/apps/frontend/monitor/.env.development
@@ -1,5 +1,5 @@
-# API 配置
-VITE_API_BASE_URL=http://localhost:8081
+# API 配置 (开发环境使用相对路径,通过 Vite 代理转发)
+VITE_API_BASE_URL=/api
 
 # Shop Demo 配置
 VITE_SHOP_DEMO_URL=http://localhost:5433
