feat: 优化应用管理功能
后端改进:
- 添加 UpdateApplicationDto 验证 schema,支持更新应用名称、URL 和描述
- 实现 ApplicationService.update() 方法,支持更新应用字段
- 添加应用所有权验证,确保用户只能更新自己的应用

前端改进:
- 去掉应用卡片的'快速测试'按钮,添加'编辑应用'按钮
- 实现编辑应用对话框,支持编辑应用名称和 URL
- 登出时清除所有 localStorage,避免用户数据混淆
- 优化应用卡片布局和交互逻辑

业务逻辑优化:
- 修复登出后 localStorage 残留导致的应用 ID 错误问题
- 移除不合理的'快速测试'功能(打开 Shop Demo)
- 提供更直观的应用编辑入口

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dev:server:dsn": "pnpm --filter @sky-monitor/monitor-dsn-server start:dev",
         "dev:server:monitor": "pnpm --filter @sky-monitor/monitor-server start:dev",
         "dev:client:monitor": "pnpm --filter @sky-monitor/monitor-client start:dev",
+        "dev:demo:shop": "pnpm --filter @sky-monitor/shop-demo start:dev",
         "docker:start": "docker compose -f .devcontainer/docker-compose.yml up -d",
         "docker:stop": "docker compose -f .devcontainer/docker-compose.yml down",
         "docker:deploy": "docker compose -f .devcontainer/docker-compose.deploy.yml up -d",
