feat: 优化 shop-demo 错误演示
- 支付失败改为 100% 失败,方便测试 SDK 错误捕获
- 商品图片改用 Unsplash 真实图片,提升视觉效果
- 移除占位图,使用高质量产品图片

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "clean:build": "pnpm --filter @sky-monitor/* clean",
         "clean:caches": "rimraf .turbo",
         "clean:all": "run-s clean:build clean:caches",
-        "dev": "run-p dev:server:dsn dev:server:monitor dev:client:monitor",
+        "dev": "run-p dev:server:dsn dev:server:monitor dev:client:monitor dev:demo:shop",
         "dev:server:dsn": "pnpm --filter @sky-monitor/monitor-dsn-server start:dev",
         "dev:server:monitor": "pnpm --filter @sky-monitor/monitor-server start:dev",
         "dev:client:monitor": "pnpm --filter @sky-monitor/monitor-client start:dev",
