--- a/demos/shop-demo/package.json
+++ b/demos/shop-demo/package.json
@@ -7,6 +7,7 @@
         "start:dev": "vite",
         "dev": "vite",
         "build": "tsc -b && vite build",
+        "build:prod": "RELEASE_VERSION=v1.0.0-$(date +%s) tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview"
     },
