fix: 修复 rrweb 鼠标轨迹显示问题并简化雷达图
- 修改 sampling.mousemove 从 50ms 改为 true,录制所有鼠标移动
- 简化 mouseInteraction 配置为 true
- 简化雷达图实现,使用单一 Radar 组件
- 添加雷达图图例显示

--- a/demos/shop-demo/package.json
+++ b/demos/shop-demo/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "start:dev": "vite preview",
+        "start:dev": "vite",
         "dev": "vite",
         "build": "tsc -b && vite build",
         "build:prod": "RELEASE_VERSION=v1.0.0-$(date +%s) tsc -b && vite build",
